data/derived/comb/progs/unify/prog7003.ml.out
Characters 155-174:
  in wwhile(go, isFPoint b, b);;
           ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type ('d -> 'd * bool) * 'd
